[package]
name = "leaf-mobile"
version = "0.1.0"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "leaf"
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
default = [
    "leaf/all-configs",
    "leaf/inbound-tun",
    "leaf/outbound-direct",
    "leaf/outbound-drop",
    "leaf/outbound-redirect",
    "leaf/outbound-socks",
    "leaf/outbound-trojan",
    "leaf/outbound-tls",
    "leaf/outbound-amux",
    "leaf/outbound-h2",
    "leaf/outbound-failover",
    "leaf/outbound-tryall",
    "leaf/outbound-chain",
    "leaf/outbound-retry",
    "leaf/ring-aead",
    "leaf/rustls-tls",
]

[dependencies]
leaf = { path = "../leaf", default-features = false, optional = true }
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
memchr = "2.3"
bytes = "0.5"
tokio = { version = "0.2", features = ["macros"] }
futures = "0.3"

[build-dependencies]
bindgen = "0.55"
